# elysium

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.py  flake.backup  flake.nix  instructions.md
.claude/memory/: MEMORY.md
.claude/plans/: Phase1-KernelCore-Plan.md
.github/workflows/: ci.yml  pages.yml
.nix-zsh/: .zshrc
app/adc-test/: CMakeLists.txt  main.cpp
app/blinky/: CMakeLists.txt  main.cpp
app/dma-test/: CMakeLists.txt  main.cpp
app/hello/: CMakeLists.txt  main.cpp
app/i2c-slave/: CMakeLists.txt  main.cpp
app/i2c-test/: CMakeLists.txt  main.cpp
app/ipc-demo/: CMakeLists.txt  main.cpp
app/rng-demo/: CMakeLists.txt  main.cpp
app/rtc-test/: CMakeLists.txt  main.cpp
app/spi-demo/: CMakeLists.txt  main.cpp
app/spi2-slave/: CMakeLists.txt  main.cpp
app/spi2-test/: CMakeLists.txt  main.cpp
app/threads/: CMakeLists.txt  main.cpp
app/timer-test/: CMakeLists.txt  logic-test.cpp  main.cpp
app/uart2-echo/: CMakeLists.txt  main.cpp
app/uart2-test/: CMakeLists.txt  main.cpp
apps/sensor_hub/: CMakeLists.txt  main.cpp
boards/: pynq-z2.dts  pynq-z2.yaml  stm32f207zgt6.dts  stm32f207zgt6.yaml  stm32f407zgt6.dts  stm32f407zgt6.yaml
boards/pynq-z2/: BoardConfig.h  BoardDtb.cpp  board.dtb
boards/stm32f207zgt6/: BoardConfig.h  BoardDtb.cpp  board.dtb
boards/stm32f407zgt6/: BoardConfig.h  BoardDtb.cpp  board.dtb
cmake/: arm-none-eabi-gcc.cmake
doc/design/: CrashDump.md  Phase0-Foundation.md  Phase1-KernelCore.md
docs/: TASKS.md  architecture.html  debugging-playbook.html  pynq-z2-bringup.md  the-story-of-ms-os.html
docs/architecture/: index.html  sec01-memory-maps.html  sec02-boot-sequence.html  sec03-threads.html  sec04-context-switch.html  sec05-scheduler.html  sec06-ipc.html  sec07-syscall.html  sec08-device-tree.html  sec09-allocators.html  sec10-watchdog.html  sec11-dynamic-threads.html  sec12-bus-drivers.html  sec13-registers.html  shared.css  shared.js
docs/design/: phase-10-watchdog.md  phase-11-dynamic-threads.md  phase-12-spi-i2c-dma.md  phase-13-uart-board-to-board.md  phase-14-spi-board-to-board.md  phase-15-i2c-board-to-board.md  phase-16-global-error-codes.md  phase-17-hw-driver-validation.md  phase-18-dma-hw-coverage.md  phase-18-timers.md  phase-19-spi-dma-transfer.md  phase-2-scheduling.md  phase-20-adc-single-shot.md  phase-3-memory-management.md  phase-4-multi-target.md  phase-5-ipc.md  phase-6-syscall.md  phase-7-device-tree.md  phase-8-power-management.md  phase-9-shell.md  phase-rng.md  phase-rtc.md
docs/playbook/: index.html  sec01-jtag-setup.html  sec02-gdb-cookbook.html  sec03-crash-dumps.html  sec04-bug-hunts.html  sec05-openocd.html  sec06-serial.html  sec07-toolchain.html
docs/reviews/: CR-8eeee33-crash-dump-three-layer-refactor.md
docs/saga/: appendix.html  ch00-prologue.html  ch01-foundation.html  ch02-kernel-core.html  ch03-scheduling.html  ch04-memory.html  ch05-multi-target.html  ch06-ipc.html  ch07-syscall.html  ch08-device-tree.html  ch09-power.html  ch10-shell.html  ch11-ci.html  ch12-night-shift.html  ch13-bus-drivers.html  ch14-uart-test.html  ch15-epilogue.html  ch16-adc-on-target.html  ch16-timers.html  ch17-rng.html  ch17-rtc.html  ch18-adc-on-target.html  index.html  shared.css
hal/: CMakeLists.txt
hal/inc/hal/: Adc.h  Dma.h  Gpio.h  I2c.h  Rcc.h  Rng.h  Rtc.h  Spi.h  Timer.h  Uart.h  Watchdog.h  stm32f4xx_hal_conf.h
hal/src/stm32f4/: Adc.cpp  Dma.cpp  Gpio.cpp  I2c.cpp  Rcc.cpp  Rng.cpp  Rtc.cpp  Spi.cpp  Timer.cpp  Uart.cpp  Watchdog.cpp
hal/src/zynq7000/: Adc.cpp  Dma.cpp  Gpio.cpp  I2c.cpp  Rcc.cpp  Rng.cpp  Rtc.cpp  Spi.cpp  Timer.cpp  Uart.cpp  Watchdog.cpp
kernel/: CMakeLists.txt
kernel/inc/kernel/: Arch.h  BlockPool.h  BoardConfig.h  CortexM.h  CrashDump.h  CrashDumpArch.h  CrashDumpBoard.h  Fdt.h  Heap.h  Ipc.h  Kernel.h  Mpu.h  Mutex.h  Scheduler.h  Semaphore.h  Shell.h  Syscall.h  Thread.h  Version.h
kernel/src/arch/cortex-a9/: Arch.cpp  ContextSwitch.s  CrashDumpArch.cpp  FaultHandlers.s  Mpu.cpp
kernel/src/arch/cortex-m3/: Arch.cpp  ContextSwitch.s  CortexM.cpp  FaultHandlers.s  Mpu.cpp
kernel/src/arch/cortex-m4/: Arch.cpp  ContextSwitch.s  CortexM.cpp  CrashDumpArch.cpp  FaultHandlers.s  Mpu.cpp
kernel/src/board/pynq-z2/: CrashDumpBoard.cpp
kernel/src/board/stm32f207zgt6/: CrashDumpBoard.cpp
kernel/src/board/stm32f407vet6/: CrashDumpBoard.cpp
kernel/src/board/stm32f407zgt6/: CrashDumpBoard.cpp
kernel/src/core/: BlockPool.cpp  BoardConfig.cpp  CrashDump.cpp  CrashDumpCommon.cpp  CrashDumpInternal.h  Fdt.cpp  Heap.cpp  HeapOperators.cpp  Ipc.cpp  Kernel.cpp  Mutex.cpp  Scheduler.cpp  Semaphore.cpp  Shell.cpp  SvcDispatch.cpp  Thread.cpp  WaitQueue.cpp  WaitQueue.h
openocd/: pynq-z2.cfg
startup/: CMakeLists.txt
startup/inc/startup/: SystemClock.h
startup/pynq-z2/: Linker.ld  Startup.s  SystemInit.cpp
startup/stm32f207zgt6/: Linker.ld  Startup.s  SystemInit.cpp
startup/stm32f407vet6/: Linker.ld  Startup.s  SystemInit.cpp
startup/stm32f407vgt6/: Linker.ld  Startup.s  SystemInit.cpp
startup/stm32f407zgt6/: Linker.ld  Startup.s  SystemInit.cpp
test/: CMakeLists.txt
test/hal/: AdcTest.cpp  CMakeLists.txt  DmaTest.cpp  GpioTest.cpp  I2cTest.cpp  MockAdc.cpp  MockDma.cpp  MockGpio.cpp  MockI2c.cpp  MockRcc.cpp  MockRegisters.h  MockRng.cpp  MockRtc.cpp  MockSpi.cpp  MockTimer.cpp  MockUart.cpp  MockWatchdog.cpp  RccTest.cpp  RngTest.cpp  RtcTest.cpp  SpiTest.cpp  TimerTest.cpp  UartTest.cpp  WatchdogTest.cpp
test/kernel/: BlockPoolTest.cpp  BoardConfigTest.cpp  CMakeLists.txt  CrashDumpTest.cpp  ErrorCodeTest.cpp  FdtTest.cpp  HeapTest.cpp  IpcTest.cpp  KernelIntegrationTest.cpp  MockArch.cpp  MockCortexM.cpp  MockCrashDump.cpp  MockCrashDump.h  MockHalWatchdog.cpp  MockKernel.h  MockKernelGlobals.cpp  MockMpu.cpp  MockMpu.h  MockSystemClock.cpp  MpuTest.cpp  MutexTest.cpp  PowerTest.cpp  SchedulerTest.cpp  SemaphoreTest.cpp  ShellTest.cpp  SvcDispatchTest.cpp  SyscallTest.cpp  ThreadTest.cpp
tools/: build_dtbs.py  crash_monitor.py  dtb2cpp.py  dtb2cpp_test.py  fdtlib.py  hw_driver_runner.py
(+23 files in other folders)
